# PowerLetter-for-Puzzles

./: .gitignore  404.html  Cargo.toml  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.app.json  tsconfig.node.json  turbo.json  vite.config.ts
.changeset/: README.md  config.json
.github/workflows/: ci.yml  release.yml
apps/desktop-mobile/: index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop-mobile/src/: App.css  App.tsx  i18n.ts  index.css
apps/desktop-mobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-mobile/src-tauri/capabilities/: default.json
apps/desktop-mobile/src-tauri/icons/: icon.icns
apps/desktop-mobile/src-tauri/src/: lib.rs  main.rs
apps/web/: next.config.ts  package.json  tsconfig.json
assets/: ClueGameLayout-9N7gM-mD.js  ClueGameLayout-9qYTqmuX.js  ClueGameLayout-B1yqTtjX.js  ClueGameLayout-BE6dQMOB.js  ClueGameLayout-BRCOT5In.js  ClueGameLayout-BaxFAdaP.js  ClueGameLayout-C003pTYd.js  ClueGameLayout-Cg89d9Nn.js  ClueGameLayout-Cz4PTvgR.js  ClueGameLayout-D2vn4HgP.js  ClueGameLayout-Domgj8Kd.js  ClueGameLayout-O8Bn1LX1.js  ClueGameLayout-OQupGqtW.js  ClueGameLayout-PPXOfg05.js  ClueGameLayout-gF5rYIjh.js  ClueGameLayout-wWr_Enrd.js  ClueGameScreen-BA5avzZU.js  ClueGameScreen-BhA1smUb.js  ClueGameScreen-BnpLw6D2.js  ClueGameScreen-C-PhkgJN.js  ClueGameScreen-C3v-eIzk.js  ClueGameScreen-C4rKVKyD.js  ClueGameScreen-ClPH1fry.js  ClueGameScreen-Cw1iBCZ7.js  ClueGameScreen-DLEt1vaT.js  ClueGameScreen-DMmBsUIu.js  ClueGameScreen-DkwW_KKj.js  ClueGameScreen-RbV8-W6b.js  ClueGameScreen-XgIXUcXz.js  FormationGameScreen-3TezleR8.js  FormationGameScreen-4lg9d_du.js  FormationGameScreen-B00pUtiy.js  FormationGameScreen-B4osNk4u.js  FormationGameScreen-BASzbrbb.js  FormationGameScreen-BAYOAwN3.js  FormationGameScreen-BKG-lH_L.js  FormationGameScreen-BR5KCZhv.js  FormationGameScreen-BYacEXSU.js  FormationGameScreen-BmP9O3tQ.js  FormationGameScreen-Bpu4ANl9.js  (+440 more)
crates/power-core/: Cargo.toml
crates/power-engine/: Cargo.toml
crates/power-engine/src/: error.rs  letter_flow.rs  lib.rs  loader.rs  models.rs  plugin.rs  registry.rs  validator.rs
crates/power-game-formation/: Cargo.toml
crates/power-game-formation/src/: engine.rs  lib.rs  models.rs  validator.rs
crates/power-game-imageclue/: Cargo.toml
crates/power-game-imageclue/src/: lib.rs  models.rs
crates/power-game-img-choice/: Cargo.toml
crates/power-game-img-clue/: Cargo.toml
crates/power-game-imgchoice/: Cargo.toml
crates/power-game-imgchoice/src/: models.rs
crates/power-game-letterflow/: Cargo.toml
crates/power-game-letterflow/src/: engine.rs  lib.rs  models.rs  validator.rs
crates/power-game-outsider/: Cargo.toml
crates/power-game-outsider/src/: engine.rs  lib.rs  round.rs
crates/power-game-outsidestory/: Cargo.toml
crates/power-game-outsidestory/src/: engine.rs  models.rs  round.rs
crates/power-game-phrase-clue/: Cargo.toml
crates/power-game-phrase-clue/src/: models.rs
crates/power-game-phraseclue/: Cargo.toml
crates/power-game-word-choice/: Cargo.toml
crates/power-game-wordchoice/: Cargo.toml
crates/power-game-wordchoice/src/: models.rs
crates/power-math/: Cargo.toml
crates/power-math/src/: constraint.rs  geometry.rs  graph.rs  grid.rs  lib.rs
crates/power-wasm/: Cargo.toml
crates/power-wasm/src/: exports.rs  lib.rs
docs/api/: README.md
docs/architecture/: overview.md
docs/guides/: getting-started.md
locales/: README.en.md
scripts/: copy-404.cjs  copy-assets.js  set-version.mjs
src/: App.css  App.tsx  i18n.ts  index.css  main.tsx
src/components/GameScreens/: GameLayout.tsx  GameTypeSelector.tsx  SolutionBoxes.tsx
src/components/GameSetup/: GameModeSelector.tsx  KidsGameModeSelector.tsx  LanguageSelector.tsx  ModeToggler.tsx  TeamConfigurator.tsx
src/components/atoms/: GameButton.tsx  LetterBox.tsx  LetterFlowCell.tsx  Logo.tsx  Notification.tsx  SolutionBox.tsx  StepIndicator.tsx
src/components/common/: LanguageSelector.tsx
src/components/layout/: Footer.tsx  GameLayout.tsx  Header.tsx  LanguageSelector.tsx  ModeToggler.tsx
src/components/molecules/: CategorySelector.tsx  CrosswordGrid.tsx  DifficultySelector.tsx  GameControls.tsx  GameInstructions.tsx  InGameSettings.tsx  LanguageSelector.tsx  LetterCircle.tsx  LetterFlowBoard.tsx  LetterFlowGameControls.tsx  LetterGrid.tsx  ModeSelector.tsx  ModeToggler.tsx  Scoreboard.tsx  SolutionBoxes.tsx  TeamDisplay.tsx
src/components/organisms/: Footer.tsx  GameControls.tsx  GameModeSelector.tsx  GameScreen.tsx  Header.tsx  KidsGameModeSelector.tsx
src/components/setup/: GameModeSelector.tsx  KidsGameModeSelector.tsx
src/components/templates/: ClueGameLayout.tsx  FlowGameLayout.tsx  GameLayout.tsx  GameSelectionLayout.tsx  GameSelectionPageLayout.tsx  MultipleChoiceLayout.tsx  OutsideStoryLayout.tsx  WordFormationLayout.tsx  WordPuzzleLayout.tsx
src/components/ui/: badge.tsx  badgeVariants.ts  button.tsx  card.tsx  input.tsx  sonner.tsx
src/config/: gameCategories.tsx
src/contexts/: GameModeContext.tsx  GameModeProvider.tsx  ThemeContext.ts  ThemeProvider.tsx  useTheme.ts
src/data/ar/: clueLevels.json  words.json
src/data/en/: clueLevels.json  words.json
src/features/clue-game/: engine.ts  instructions.ts
src/features/formation-game/: engine.ts  instructions.ts
src/features/img-choice-game/: engine.ts
src/games/: GameRegistry.ts
src/hooks/: useGame.ts  useGameMode.ts  useInstructions.ts  useNotification.ts  useSolverWorker.ts  useTranslation.ts
src/lib/: gameEngineUtils.ts  gameReducer.ts  gameUtils.ts
src/pages/: GameSettingsPage.tsx  GameTypeSelector.tsx  HeroSection.tsx  Index.tsx  KidsGameSelector.tsx  NotFound.tsx  TeamConfigurator.tsx
src/stores/: useGameSettingsStore.ts  useTeamStore.ts
src/types/: game.ts
src/workers/: solver.worker.ts
(+271 files in other folders)
