[workspace]
members = [
  "apps/desktop-mobile/src-tauri",
  "crates/power-engine",
  "crates/power-game-letterflow",
  "crates/power-game-formation",
  "crates/power-game-outsider",
  "crates/power-game-img-clue",
  "crates/power-game-phrase-clue",
  "crates/power-game-img-choice",
  "crates/power-game-word-choice",
  "crates/power-wasm",
]
resolver = "2"
