[workspace]
members = [
  "apps/desktop-mobile/src-tauri",
  "crates/power-engine",
  "crates/power-game-letterflow",
  "crates/power-game-formation",
  "crates/power-game-outsidestory",
  "crates/power-game-imageclue",
  "crates/power-game-phraseclue",
  "crates/power-game-imgchoice",
  "crates/power-game-wordchoice",
  "crates/power-wasm",
  "crates/power-core",
  "crates/power-math",
]
resolver = "2"
