[package]
name = "power-engine"
version = "1.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
thiserror = "1.0"
specta = { version = "=2.0.0-rc.22", features = ["derive", "export"] }
specta-typescript = "0.0.9"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
