[package]
name = "power-game-imageclue"
version = "1.0.8"
edition = "2021"
authors = ["PowerLetter Team"]
description = "Image Clue game logic for PowerLetter"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
