[package]
name = "power-game-img-clue"
version = "0.1.0"
edition = "2021"
authors = ["PowerLetter Team"]
description = "Image Clue game logic for PowerLetter"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
