[package]
name = "power-game-letterflow"
version = "1.0.3"
edition = "2021"
authors = ["Ahmad Abdelbary"]
description = "Letter Flow game engine implementation for PowerLetter"
license = "MIT"

[lib]
crate-type = ["rlib"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Local workspace dependencies (future)
# power-core = { path = "../power-core" }
# power-math = { path = "../power-math" }

[dev-dependencies]
