[package]
name = "power-game-outsider"
version = "1.0.0-beta"
edition = "2021"
authors = ["Ahmad Abdelbary"]
description = "Outside the Story (Outsider) game engine for PowerLetter"
license = "MIT"

[lib]
crate-type = ["rlib"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rand = "0.8"

# Local workspace dependencies (future)
# power-core = { path = "../power-core" }

[dev-dependencies]
