[package]
name = "power-wasm"
version = "1.0.0-beta"
edition = "2021"
authors = ["Ahmad Abdelbary"]
description = "WebAssembly bindings for PowerLetter game engines (FSD Architecture)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
power-game-letterflow = { path = "../power-game-letterflow" }
power-game-img-clue = { path = "../power-game-img-clue" }
