[package]
name = "powerletter-app"
version = "1.0.0"
description = "PowerLetter for Puzzles - Desktop & Mobile App"
authors = ["Ahmad Abdelbary"]
edition = "2021"

[lib]
name = "powerletter_app_lib"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "powerletter-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = false
opt-level = 1
lto = true
codegen-units = 1
strip = "debuginfo"
panic = 'abort'

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
